test/compile-errors/extern-ptr-with-type-param.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [struct(range(0, 17), "", true, [type-param(range(2, 4), t)], none, extern)]
	funs: [])
